// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`messages - calculate diff 1`] = `
Immutable.List [
  Immutable.Map {
    "type": 1,
    "sender": Immutable.Map {
      "replyTo": "saturn-private-address",
      "username": "Saturn",
    },
    "createdAt": 1551963828,
    "message": "This is a new message",
  },
]
`;

exports[`messages - message to transfer creates transfer from simple message 1`] = `
Object {
  "createdAt": 1551963828,
  "message": "This is some message [object Object]",
  "sender": Object {
    "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
  },
  "type": 1,
}
`;

exports[`messages - transfer to message when memo isn't compressed string 1`] = `Array []`;

exports[`messages - transfer to message when on testnet 1`] = `
Object {
  "createdAt": 1551963828,
  "id": "test-id",
  "message": "This is some message test-id",
  "sender": Object {
    "replyTo": "ztestsapling1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngljzurf",
  },
  "spent": "234.56",
  "type": 1,
}
`;
